fixing main nav logo to overlap on all pages not just index.html

--- a/css/main.css
+++ b/css/main.css
@@ -553,11 +553,16 @@ body
     justify-content: center;
   }
 
-  .logo_middle
+  .logo_middleDesktop
   {
     margin-top: -280px;
     position: absolute;
     transition: 1.2s ease;
+  }
+
+  .logo_middle
+  {
+    position: absolute;
   }
 
 
@@ -1709,6 +1714,11 @@ body
 
 @media screen and (min-width: 965px){
 
+  #traaProject
+  {
+    margin-top: 120px;
+  }
+
   #projects
   {
     display: flex;
@@ -1775,106 +1785,7 @@ body
 
 }
 
-
-
-/*
-#navMainLeft, #navMainRight button
-{
-  background: url(../images/burger.svg) center no-repeat;
-  width: 30px;
-  height: 30px;
-  border: 0px;
-  transition: all 400ms ease;
-  margin-left: auto;
-  margin: 0 auto;
-}
-
-#heroContact img
-
-{
-  display: none;
-}
-
-.heroText1
-{
-  margin: 0 auto;
-  margin: 20px;
-  font-size: 50px;
-}
-
-#us
-{
-  color: #53652b;
-}
-
-#footerMobile
-{
-  background-color: #6e8b6e;
-  width: 100%;
-  height: 100px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-}
-
-#footerDesktop
-{
-  display: none;
-}
-
-#contactText h2
-{
-  margin: 0 auto;
-  font-size: 30px;
-  margin: 10px;
-}
-
-#contactText p
-{
-  font-size: 16px;
-  line-height: 20px;
-  margin-left: 10px;
-  margin-right: 10px;
-  text-align: center;
-}
-
-.contact-form h1
-{
-  margin: 20px;
-  font-size: 30px;
-  color: #53652b;
-}
-
-.text
-{
-  margin: 20px;
-}
-
-.btn
-{
-  display: inline-block;
-  background: #8495a5;
-  padding: 14px 0;
-  color: white;
-  text-transform: uppercase;
-  cursor: pointer;
-  margin-top: 8px;
-  width: 100%;
-  border-radius: 10px;
-}
-
-.btn:hover, button:hover {
-  background: gray;
-}
-
-
-
-#mapArea
-{
-  max-width: 100%;
-}
-
-/* LINKS PAGE */
+/* ----------------------LINKS PAGE----------------------- */
 /*
 #linksHeading
 {
@@ -2130,4 +2041,79 @@ body
 }
 
 
+} */
+
+/* ----------------------CONTACT PAGE----------------------- */
+
+/*
+#heroContact img
+
+{
+  display: none;
+}
+
+.heroText1
+{
+  margin: 0 auto;
+  margin: 20px;
+  font-size: 50px;
+}
+
+#us
+{
+  color: #53652b;
+}
+
+
+
+#contactText h2
+{
+  margin: 0 auto;
+  font-size: 30px;
+  margin: 10px;
+}
+
+#contactText p
+{
+  font-size: 16px;
+  line-height: 20px;
+  margin-left: 10px;
+  margin-right: 10px;
+  text-align: center;
+}
+
+.contact-form h1
+{
+  margin: 20px;
+  font-size: 30px;
+  color: #53652b;
+}
+
+.text
+{
+  margin: 20px;
+}
+
+.btn
+{
+  display: inline-block;
+  background: #8495a5;
+  padding: 14px 0;
+  color: white;
+  text-transform: uppercase;
+  cursor: pointer;
+  margin-top: 8px;
+  width: 100%;
+  border-radius: 10px;
+}
+
+.btn:hover, button:hover {
+  background: gray;
+}
+
+
+
+#mapArea
+{
+  max-width: 100%;
 } */
